# optitrack_packages_ros2

./: README.md
optitrack_multiplexer_ros2/: CMakeLists.txt  package.xml
optitrack_multiplexer_ros2/config/: optitrack_multiplexer_config.yaml
optitrack_multiplexer_ros2/include/optitrack_multiplexer_ros2/: definitions_memory.h  memory.h  optitrack_multiplexer.h
optitrack_multiplexer_ros2/launch/: optitrack_multiplexer.launch.py  wrapper_and_multiplexer.launch.py
optitrack_multiplexer_ros2/src/: listener_node.cpp  memory.cpp  multiplexer_node.cpp  optitrack_multiplexer.cpp
optitrack_multiplexer_ros2_msgs/: CMakeLists.txt  package.xml
optitrack_multiplexer_ros2_msgs/msg/: MarkerBase.msg  RigidBodyBase.msg  RigidBodyStamped.msg  SkeletonStamped.msg  UnlabeledMarkersStamped.msg
optitrack_wrapper_ros2/: CMakeLists.txt  package.xml
optitrack_wrapper_ros2/NatNetSDK/lib/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
optitrack_wrapper_ros2/NatNetSDK/lib/log/: latest_build
optitrack_wrapper_ros2/config/: optitrack_wrapper_config.yaml
optitrack_wrapper_ros2/include/optitrack_wrapper_ros2/: data_message_functions.h  description_message_functions.h  optitrack_wrapper.h
optitrack_wrapper_ros2/launch/: optitrack_wrapper.launch.py
optitrack_wrapper_ros2/src/: data_message_functions.cpp  description_message_functions.cpp  optitrack_wrapper.cpp  wrapper_node.cpp
optitrack_wrapper_ros2_msgs/: CMakeLists.txt  package.xml
optitrack_wrapper_ros2_msgs/msg/: AnalogChannelData.msg  CameraDescription.msg  DataDescriptions.msg  DeviceData.msg  DeviceDescription.msg  ForcePlateData.msg  ForcePlateDescription.msg  FrameOfMocapData.msg  Marker.msg  MarkerSetData.msg  MarkerSetDescription.msg  Point.msg  Pose.msg  Quaternion.msg  RigidBodyData.msg  RigidBodyDescription.msg  ServerDescription.msg  SkeletonData.msg  SkeletonDescription.msg
optitrack_wrapper_ros2_msgs/srv/: GetDataDescriptions.srv  GetServerDescription.srv
